--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "bdsx": "file:bdsx",
         "blessed": "^0.1.81",
         "colors": "1.4.0 || ^1.4.3",
+        "eslist": "^1.0.0-beta.1",
         "follow-redirects": "^1.14.7",
         "glob": "^7.2.0",
+        "lodash": "^4.17.21",
         "node-html-parser": "^5.2.0",
         "progress": "^2.0.3",
         "semver": "^7.3.8",
@@ -41,6 +43,7 @@
         "@types/blessed": "^0.1.19",
         "@types/follow-redirects": "^1.13.1",
         "@types/glob": "^7.2.0",
+        "@types/lodash": "^4.14.197",
         "@types/node": "^12.20.36",
         "@types/progress": "^2.0.5",
         "@types/semver": "^7.3.13",
