change server setting

--- a/bedrock_server/server.properties
+++ b/bedrock_server/server.properties
@@ -1,4 +1,4 @@
-server-name=Dedicated Server
+server-name=§e§kll§r §bSunrin Survival! §e§kll
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
@@ -16,7 +16,7 @@ force-gamemode=false
 # other than the gamemode value saved by the server during world creation
 # if those values are set in server.properties after world creation.
 
-difficulty=easy
+difficulty=normal
 # Sets the difficulty of the world.
 # Allowed values: "peaceful", "easy", "normal", or "hard"
 
@@ -92,7 +92,7 @@ compression-threshold=1
 # Determines the smallest size of raw network payload to compress
 # Allowed values: 0-65535
 
-compression-algorithm=zlib
+compression-algorithm=snappy
 # Determines the compression algorithm to use for networking
 # Allowed values: "zlib", "snappy"
 
