--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/progress": "^2.0.5",
         "@types/semver": "^7.3.13",
         "@types/unzipper": "^0.10.4",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
         "eslint": "^8.31.0",
