--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "pdbcachegen": "bedrock_server\\pdbcachegen.exe \"./bedrock_server/bedrock_server.exe\" \"./bedrock_server/pdbcache.bin\""
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "bdsx": "file:bdsx",
         "blessed": "^0.1.81",
         "colors": "1.4.0 || ^1.4.3",
