--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "lodash": "^4.17.21",
         "node-html-parser": "^5.2.0",
         "progress": "^2.0.3",
+        "request": "^2.88.2",
         "semver": "^7.3.8",
         "source-map": "~0.6.1",
         "sqlite-sync": "^0.3.9",
@@ -49,6 +50,7 @@
         "@types/lodash": "^4.14.197",
         "@types/node": "^12.20.36",
         "@types/progress": "^2.0.5",
+        "@types/request": "^2.48.8",
         "@types/semver": "^7.3.13",
         "@types/unzipper": "^0.10.4",
         "@types/uuid": "^9.0.2",
